--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
     "@tanstack/react-router-ssr-query": "^1.131.7",
     "@tanstack/react-start": "^1.132.0",
     "@tanstack/router-plugin": "^1.132.0",
+    "@types/virtual-scroll": "^2.0.3",
     "lucide-react": "^0.544.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "tailwindcss": "^4.0.6",
+    "virtual-scroll": "^2.2.1",
     "vite-tsconfig-paths": "^5.1.4"
   },
   "devDependencies": {
