--- a/biome.json
+++ b/biome.json
@@ -18,7 +18,8 @@
 	},
 	"formatter": {
 		"enabled": true,
-		"indentStyle": "tab"
+		"indentStyle": "tab",
+		"lineWidth":200
 	},
 	"assist": { "actions": { "source": { "organizeImports": "on" } } },
 	"linter": {
