--- a/package.json
+++ b/package.json
@@ -22,9 +22,11 @@
     "@tanstack/react-start": "^1.132.0",
     "@tanstack/router-plugin": "^1.132.0",
     "@types/virtual-scroll": "^2.0.3",
+    "framer-motion": "^12.23.24",
     "lucide-react": "^0.544.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-intersection-observer": "^10.0.0",
     "tailwindcss": "^4.1.17",
     "virtual-scroll": "^2.2.1",
     "vite-tsconfig-paths": "^5.1.4"
